[DevToolsIcons] Fix vertical alignment of icons in cookies table
Screenshots: https://imgur.com/a/R2X8tfs
Also relevant for https://crrev.com/c/5142166

Bug: chromium:1514825, chromium:1421730
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5169208
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/ui/legacy/components/cookie_table/cookiesTable.css
+++ b/front_end/ui/legacy/components/cookie_table/cookiesTable.css
@@ -6,7 +6,6 @@
 
 .cookies-table devtools-icon {
   margin-right: 4px;
-  margin-bottom: -2px;
 }
 
 .cookies-table td.flagged-cookie-attribute-cell devtools-icon {
